// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure Editor Node Figure component 1`] = `
<div>
  <div
    className="obojobo-draft--chunks--figure viewer small  is-not-selected"
  >
    <figure
      className="container"
    >
      <div
        className="figure-box   is-not-selected"
        contentEditable={false}
        onClick={[Function]}
        style={Object {}}
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="-1"
          >
            ×
          </button>
        </div>
        <div
          className="image-toolbar"
        >
          <div
            className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
            contentEditable={false}
          >
            <button
              className="button"
              contentEditable={false}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
            >
              Image Properties
            </button>
          </div>
        </div>
        <img
          alt="mockAlt"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading={null}
          onError={[Function]}
          onLoad={[Function]}
          src="mockUrl"
          style={Object {}}
          unselectable="on"
        />
      </div>
      <figcaption
        className="align-center is-caption-width-image-width"
        style={Object {}}
      />
    </figure>
  </div>
</div>
`;

exports[`Figure Editor Node Figure component handles tabbing 1`] = `"<div><div class=\\"obojobo-draft--chunks--figure viewer undefined  is-not-selected\\"><div contenteditable=\\"false\\" class=\\"accessibility-warning\\" style=\\"user-select: none;\\">Accessibility Warning: No Alt Text!</div><figure class=\\"container\\"><div class=\\"figure-box   is-not-selected\\" contenteditable=\\"false\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\" contenteditable=\\"false\\"><button class=\\"button\\" tabindex=\\"-1\\" contenteditable=\\"false\\">×</button></div><div class=\\"image-toolbar\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center properties-button\\" contenteditable=\\"false\\"><button class=\\"button\\" tabindex=\\"-1\\" contenteditable=\\"false\\">Image Properties</button></div></div><div class=\\"img-placeholder\\"></div></div><figcaption class=\\"align-center is-caption-width-image-width\\"></figcaption></figure></div></div>"`;

exports[`Figure Editor Node Figure renders with custom size correctly 1`] = `
<div>
  <div
    className="obojobo-draft--chunks--figure viewer custom  is-not-selected"
  >
    <figure
      className="container"
    >
      <div
        className="figure-box   is-not-selected"
        contentEditable={false}
        onClick={[Function]}
        style={
          Object {
            "maxWidth": "100%",
            "width": "customWidthpx",
          }
        }
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="-1"
          >
            ×
          </button>
        </div>
        <div
          className="image-toolbar"
        >
          <div
            className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
            contentEditable={false}
          >
            <button
              className="button"
              contentEditable={false}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
            >
              Image Properties
            </button>
          </div>
        </div>
        <img
          alt="mockAlt"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading={null}
          onError={[Function]}
          onLoad={[Function]}
          src="mockUrl"
          style={
            Object {
              "height": "customHeightpx",
              "width": "customWidthpx",
            }
          }
          unselectable="on"
        />
      </div>
      <figcaption
        className="align-center is-caption-width-text-width"
        style={Object {}}
      />
    </figure>
  </div>
</div>
`;

exports[`Figure Editor Node Figure renders with custom size correctly 2`] = `
<div>
  <div
    className="obojobo-draft--chunks--figure viewer custom  is-not-selected"
  >
    <figure
      className="container"
    >
      <div
        className="figure-box   is-not-selected"
        contentEditable={false}
        onClick={[Function]}
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="-1"
          >
            ×
          </button>
        </div>
        <div
          className="image-toolbar"
        >
          <div
            className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
            contentEditable={false}
          >
            <button
              className="button"
              contentEditable={false}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
            >
              Image Properties
            </button>
          </div>
        </div>
        <img
          alt="mockAlt"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading={null}
          onError={[Function]}
          onLoad={[Function]}
          src="mockUrl"
          style={
            Object {
              "height": "customHeightpx",
            }
          }
          unselectable="on"
        />
      </div>
      <figcaption
        className="align-center is-caption-width-image-width"
        style={Object {}}
      />
    </figure>
  </div>
</div>
`;

exports[`Figure Editor Node Figure renders with custom size correctly 3`] = `
<div>
  <div
    className="obojobo-draft--chunks--figure viewer custom  is-not-selected"
  >
    <figure
      className="container"
    >
      <div
        className="figure-box   is-not-selected"
        contentEditable={false}
        onClick={[Function]}
        style={
          Object {
            "maxWidth": "100%",
            "width": "customWidthpx",
          }
        }
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex="-1"
          >
            ×
          </button>
        </div>
        <div
          className="image-toolbar"
        >
          <div
            className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
            contentEditable={false}
          >
            <button
              className="button"
              contentEditable={false}
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex="-1"
            >
              Image Properties
            </button>
          </div>
        </div>
        <img
          alt="mockAlt"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading={null}
          onError={[Function]}
          onLoad={[Function]}
          src="mockUrl"
          style={
            Object {
              "width": "customWidthpx",
            }
          }
          unselectable="on"
        />
      </div>
      <figcaption
        className="align-center is-caption-width-image-width"
        style={
          Object {
            "width": "customWidthpx",
          }
        }
      />
    </figure>
  </div>
</div>
`;
